crates/check_oxlint/tests/snapshots/oxlint_test__no_dupe_class_members.snap
---
source: crates/check_oxlint/tests/oxlint_test.rs
expression: response.to_string()
snapshot_kind: text
---
{
  "file_name": "no-dupe-class-members.js",
  "help": "The last declaration overwrites previous ones, remove one of them or rename if both should be retained",
  "url": "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-dupe-class-members.html",
  "severity": "error",
  "code": "eslint(no-dupe-class-members)",
  "message": "Duplicate class member: \"foo\"",
  "labels": [
    {
      "span": {
        "offset": 11,
        "length": 3
      },
      "loc": {
        "start": {
          "line": 2,
          "col": 2
        },
        "end": {
          "line": 2,
          "col": 5
        }
      }
    },
    {
      "span": {
        "offset": 21,
        "length": 3
      },
      "loc": {
        "start": {
          "line": 3,
          "col": 2
        },
        "end": {
          "line": 3,
          "col": 5
        }
      }
    }
  ]
}
