crates/check_oxlint/tests/snapshots/oxlint_test__no_dupe_else_if.snap
---
source: crates/check_oxlint/tests/oxlint_test.rs
expression: response.to_string()
snapshot_kind: text
---
{
  "file_name": "no-dupe-else-if.js",
  "help": "This branch can never execute. Its condition is a duplicate or covered by previous conditions in the if-else-if chain",
  "url": "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-dupe-else-if.html",
  "severity": "error",
  "code": "eslint(no-dupe-else-if)",
  "message": "duplicate conditions in if-else-if chains",
  "labels": [
    {
      "span": {
        "offset": 20,
        "length": 1
      },
      "loc": {
        "start": {
          "line": 2,
          "col": 12
        },
        "end": {
          "line": 2,
          "col": 13
        }
      }
    },
    {
      "span": {
        "offset": 4,
        "length": 1
      },
      "loc": {
        "start": {
          "line": 1,
          "col": 5
        },
        "end": {
          "line": 1,
          "col": 6
        }
      }
    }
  ]
}
