crates/check_oxlint/tests/snapshots/oxlint_test__no_dupe_keys.snap
---
source: crates/check_oxlint/tests/oxlint_test.rs
expression: response.to_string()
snapshot_kind: text
---
{
  "file_name": "no-dupe-keys.js",
  "help": "Consider removing the duplicated key",
  "url": "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-dupe-keys.html",
  "severity": "error",
  "code": "eslint(no-dupe-keys)",
  "message": "Duplicate key 'foo'",
  "labels": [
    {
      "span": {
        "offset": 15,
        "length": 3
      },
      "loc": {
        "start": {
          "line": 2,
          "col": 2
        },
        "end": {
          "line": 2,
          "col": 5
        }
      }
    },
    {
      "span": {
        "offset": 24,
        "length": 3
      },
      "loc": {
        "start": {
          "line": 3,
          "col": 2
        },
        "end": {
          "line": 3,
          "col": 5
        }
      }
    }
  ]
}
