crates/check_oxlint/tests/snapshots/oxlint_test__no_new_for_builtins.snap
---
source: crates/check_oxlint/tests/oxlint_test.rs
expression: response.to_string()
snapshot_kind: text
---
{
  "file_name": "new-for-builtins.js",
  "help": "",
  "url": "https://oxc.rs/docs/guide/usage/linter/rules/unicorn/new-for-builtins.html",
  "severity": "error",
  "code": "eslint-plugin-unicorn(new-for-builtins)",
  "message": "Use `new Array()` instead of `Array()`",
  "labels": [
    {
      "span": {
        "offset": 13,
        "length": 9
      },
      "loc": {
        "start": {
          "line": 1,
          "col": 14
        },
        "end": {
          "line": 1,
          "col": 23
        }
      }
    }
  ]
}
